--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jade-doc-markdown",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "Jade documentation output markdown",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Aratramba/jade-doc-markdown/issues"
+  },
+  "bin": {
+    "jade-doc-markdown": "cli.js"
   },
   "homepage": "https://github.com/Aratramba/jade-doc-markdown#readme",
   "dependencies": {
