--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "jade-doc-markdown",
-  "version": "0.10.0",
-  "description": "Jade documentation output markdown",
+  "name": "pug-doc-markdown",
+  "version": "0.11.0",
+  "description": "Pug (Jade) documentation output markdown",
   "main": "index.js",
   "scripts": {
     "test": "tape test/*.js | faucet"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Aratramba/jade-doc-markdown.git"
+    "url": "git+https://github.com/Aratramba/pug-doc-markdown.git"
   },
   "keywords": [
     "jade",
     "jade-doc",
+    "pug",
+    "pug-doc",
     "documentation",
     "markdown"
   ],
   "author": "Arjen Scherff-de Water",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Aratramba/jade-doc-markdown/issues"
+    "url": "https://github.com/Aratramba/pug-doc-markdown/issues"
   },
   "bin": {
-    "jade-doc-markdown": "cli.js"
+    "pug-doc-markdown": "cli.js"
   },
-  "homepage": "https://github.com/Aratramba/jade-doc-markdown#readme",
+  "homepage": "https://github.com/Aratramba/pug-doc-markdown#readme",
   "dependencies": {
     "JSONStream": "^1.0.6",
     "faucet": "0.0.1",
